--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -14,20 +14,20 @@
                         </p>
                         <ul class="skills-list" data-aos="fade-up">
                             <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Angular </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">RxJS </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">HTML &amp; (S)CSS </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Laravel </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Express </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">WordPress </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Jasmine / Karma (TDD) </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">CI / CD </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Entity Framework </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">React </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Java </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">SOLID </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">OOP </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Design Pattern </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">.NET </span></li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-6 mt-4 mt-md-0 text-center" data-aos="fade-up" data-aos-duration="1000">
                     <div class="about-img-container">
-                        <img (click)='analyticsService.sendAnalyticEvent("click_image", "about", "image")' class="rounded" width="400"  src="assets/images/deneme.jpg" alt="José Andrés">
+                        <img (click)='analyticsService.sendAnalyticEvent("click_image", "about", "image")' class="rounded" width="400"  src="assets/images/deneme.jpg" alt="Said Erdem Ozturk">
 
                     </div>
                 </div>
