--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -11,11 +11,25 @@
                     <h3>{{profile.jobName}}</h3>
                 </div>
                 <div class='banner-description'>
-                    <p [innerHTML]="profile.description"></p>
+                    <div *ngIf="isLoading">
+                        <div class="placeholder-glow">
+                            <div class="placeholder col-6"></div>
+                            <div class="placeholder col-6"></div>
+                            <div class="placeholder col-6"></div>
+                            <div class="placeholder col-6"></div>
+                            <div class="placeholder col-6"></div>
+
+                        </div>
+                      </div>
+                      <div *ngIf="!isLoading">
+                        <p [innerHTML]="profile.description"></p>
+                      </div>
+                      
+                    
                 </div>
             </div>
             <div class="div-btn-banner">
-                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "banner", "email")' href="mailto:andresjosehr@gmail.com" target="_black" class="main-btn">
+                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "banner", "email")' href="mailto:saiderdemozturk@gmail.com" target="_black" class="main-btn">
                     {{"Banner.ActionBtn" | translate}}
                 </a>
             </div>
