loading page added

--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="!isLoading">
+
+
 <section class="section banner">
     <div [@bannerTrigger] class="container">
         <div class="section-box-banner">
@@ -36,3 +39,5 @@
         </div>
     </div>
 </section>
+</div>
+
