--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="!isLoading">
+
+
 <section class="section" id="contact">
   <div class="container contact">
     <div class="section-box">
@@ -33,3 +36,5 @@
     </div>
   </div>
 </section>
+</div>
+
