--- a/src/app/components/home/jobs/jobs.component.html
+++ b/src/app/components/home/jobs/jobs.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="!isLoading">
+
+
 <section class="section" id="jobs">
   <div class="container jobs">
     <div class="section-box">
@@ -46,3 +49,5 @@
     </div>
   </div>
 </section>
+</div>
+
