--- a/src/app/components/home/more-proyects/more-proyects.component.html
+++ b/src/app/components/home/more-proyects/more-proyects.component.html
@@ -1,3 +1,5 @@
+<div *ngIf="!isLoading">
+
 <section class="section more-proyects">
     <div class="container">
         <div class="section-box">
@@ -44,3 +46,5 @@
         </div>
     </div>
 </section>
+</div>
+
