--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -1,4 +1,5 @@
-<section class="section proyects" id='proyects'>
+<div *ngIf="!isLoading">
+    <section class="section proyects" id='proyects'>
     <div class="container">
         <div class="section-box">
             <div data-aos="fade-up" data-aos-duration="1000">
@@ -66,3 +67,5 @@
         </div>
     </div>
 </section>
+</div>
+
