--- a/src/app/components/general/loading/loading.component.html
+++ b/src/app/components/general/loading/loading.component.html
@@ -1,1 +1,4 @@
-<p>loading works!</p>
+<div class="full-screen-div" *ngIf="isLoading">
+    <div class="spinner-border " role="status">
+    </div>
+</div>
