--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="!isLoading">
+
+
 <section class="section about" id='about'>
     <div class="container">
         <div class="section-box">
@@ -36,3 +39,5 @@
         </div>
     </div>
 </section>
+</div>
+
