--- a/src/app/components/home/projects/proyects.component.html
+++ b/src/app/components/home/projects/proyects.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!isLoading">
-    <section class="section proyects" id='proyects'>
+    <section class="section projects" id='projects'>
     <div class="container">
         <div class="section-box">
             <div data-aos="fade-up" data-aos-duration="1000">
